--- a/html/Sanstitre/index.html
+++ b/html/Sanstitre/index.html
@@ -34,6 +34,16 @@
                  <input autofocus type="number" max="77" min="18" name="age" class="champ" placeholder="enter your name"required>
             </div>
         </div>
+        <div class="tableau">
+            <div class="demand">
+                <label for="stat" id="statut-label" >which one describe your role ?</label>
+
+            </div>
+            <div class="response">
+                <select name="stat" id=""></select>
+
+            </div>
+        </div>
     </form>
 </div>
 
