--- a/html/p2/Sanstitre/index.html
+++ b/html/p2/Sanstitre/index.html
@@ -34,13 +34,24 @@
                  <input autofocus type="number" max="77" min="18" name="age" class="champ" placeholder="enter your name"required>
             </div>
         </div>
-        <div class="tableau">
+    </div>
             <div class="demand">
                 <label for="stat" id="statut-label" >which one describe your role ?</label>
-
+            </div>
+            <div></div>
+                <select name="" id="">
+                    <option disabled value>Select an option</option>
+                    <option  value="student">Student</option>
+                    <option value="job">Full Time Job</option>
+                    <option value="learner">Full Time Learner</option>
+                    <option value="preferNo">Prefer not to say</option>
+                    <option value="other">Other</option>
+                </select>
             </div>
             <div class="response">
-                <select name="stat" id=""></select>
+                <select name="stat" id="">
+                    <option selected value="etudiant"></option>
+                </select>
 
             </div>
         </div>
