--- a/html/p3/main.html
+++ b/html/p3/main.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <title>Original Trombones</title>
     </head>
-    <header id="nav">
-        <img src="" alt="">
-    <p>
-        ta mere la 
-    </p>
+    <header id="head">
+        <div id="logo"><img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="logo"></div>
+        <nav id = "nav">
+            <div id="lfeatures"><a href="#features">Features</a></div>
+            <div id="hiwl"><a href="#hiw">How It Works</a></div>
+            <div id="lpricing"><a href="#Pricing">Pricing</a></div>
+        </nav>
     </header>
+    <body id="content">
+        <section id="features"></section>
+        <section id="hiw"></section>
+        <section id="pricing">
+            <div id="600"></div>
+            <div id="900"></div>
+            <div id="1200"></div>
+        </section>
+    </body>
+    <footer id="footer">
+
+    </footer>
 </html>
